<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/value_16dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/judul"
                android:text="@string/nama_mobil" />

            <TextView
                android:id="@+id/nama"
                style="@style/sub_judul"
                tools:text="Baik sekali" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="5dp"
                    card_view:cardElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    style="@style/judul"
                                    android:layout_weight="1"
                                    android:text="@string/no_pol" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/txt_no_pol"
                                style="@style/sub_judul"
                                tools:text="Baik sekali" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider" />

                            <TextView
                                style="@style/judul"
                                android:text="@string/kondisi" />

                            <TextView
                                android:id="@+id/txt_kondisi"
                                style="@style/sub_judul"
                                tools:text="Tujuan" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider" />

                            <TextView
                                style="@style/judul"
                                android:text="@string/status_pinjam" />

                            <TextView
                                android:id="@+id/txt_status"
                                style="@style/sub_judul"
                                tools:text="Dipinjam" />
                        </LinearLayout>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>