<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context="com.example.lazismu.ketek.menu.zakat.Zakat">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relatif1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:background="@color/colorWhite">
            <ImageView
                android:src="@drawable/ic_bgzakat"
                android:layout_width="match_parent"
                android:layout_height="65dp"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/txtzakat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="Risalah Zakat"
        android:layout_below="@+id/relatif1"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"/>


    <ScrollView
        android:layout_below="@+id/txtzakat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Gaji / Profesi / pendapatan"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_profesi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/zgaji"/>
                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Emas / Perak"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_emas"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/zmas"/>
                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Ziro,ah (pertanian/segala macam hasil bumi)"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pertanian"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/ztani"/>
                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:background="@color/colorWhite"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Ma,adin (Barang Galian)"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_galian"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/zgalian"/>
                <Button
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Rikaz (harta Temuan)"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_temuan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/zhk"/>
                <Button
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Tijaroh (Perdagangan)"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_dagang"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/zdg"/>
                <Button
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Zakat Binatang Ternak"
                    android:layout_marginStart="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_ternak"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:text="@string/zhw"/>
                <Button
                    android:id="@+id/btn7"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="230dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="Tunaikan"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
